--- a/Kubernetes/Kubernetes-manifest/promtail-configmap.yaml
+++ b/Kubernetes/Kubernetes-manifest/promtail-configmap.yaml
@@ -36,25 +36,59 @@ data:
               - localhost
             labels:
               app: azure-pipeline-repo
-              __path__: 
-                - /app/logs/ps-azurepipeline-processor-*.log
-                - /app/logs/ps-azurerepository-processor-*.log
+              __path__: /app/logs/ps-azurepipeline-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: azure-pipeline-repo
+              __path__: /app/logs/ps-azurerepository-processor-*.log
       - job_name: devops-processor
         static_configs:
           - targets:
               - localhost
             labels:
               app: devops-processor
-              __path__:
-                - /app/logs/ps-bamboo-processor-*.log
-                - /app/logs/ps-github-processor-*.log
-                - /app/logs/ps-gitlab-processor-*.log
-                - /app/logs/ps-bitbucket-processor-*.log
-                - /app/logs/ps-teamcity-processor-*.log
-                - /app/logs/ps-githubaction-processor-*.log
-                - /app/logs/ps-zephyr-processor-*.log
-                - /app/logs/ps-sonar-processor-*.log
-                - /app/logs/ps-jenkins-processor-*.log
+              __path__: /app/logs/ps-bamboo-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-github-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-gitlab-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-bitbucket-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-teamcity-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-githubaction-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-zephyr-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-sonar-processor-*.log
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/ps-jenkins-processor-*.log
       - job_name: jira-processor
         static_configs:
           - targets:
