--- a/processors/github-action/pom.xml
+++ b/processors/github-action/pom.xml
@@ -23,7 +23,7 @@
   <description>Github Actions processor service</description>
   <packaging>jar</packaging>
   <artifactId>githubaction-processor</artifactId>
-  <version>9.2.0-SNAPSHOT</version>
+  <version>9.3.0</version>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -265,7 +265,7 @@
 
 
   <scm>
-    <tag>4.6.1</tag>
+    <tag>9.3.0</tag>
   </scm>
 </project>
 
