--- a/.github/workflows/Github_CI_Master.yaml
+++ b/.github/workflows/Github_CI_Master.yaml
@@ -15,16 +15,10 @@ on:
       - ready_for_review
       - reopened
       - unlocked
-    branches: 
-      - master
-      - develop
-      - qa-master
+    branches: [ master ]
   pull_request_review:
     types: [edited, dismissed]
-    branches: 
-      - master
-      - develop
-      - qa-master
+    branches: [ master ]
 env:
   GITHUB_HEAD_NAME: $GITHUB_HEAD_REF
   sonartoken: ${{secrets.SONARQUBE_TOKEN}}
