--- a/processors/teamcity/pom.xml
+++ b/processors/teamcity/pom.xml
@@ -23,7 +23,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<description>Teamcity Build Processor Microservice</description>
 	<packaging>jar</packaging>
-	<version>9.3.0-SNAPSHOT</version>
+	<version>9.3.0</version>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -222,6 +222,6 @@
 
 
 	<scm>
-		<tag>4.6.1</tag>
+		<tag>9.3.0</tag>
 	</scm>
 </project>
